# dlive-midi-bridge

./: .gitignore  README.md  install-pi.sh  install.sh  pyproject.toml
config/: config.example.yaml
src/dlive_midi_bridge/: __init__.py  bridge.py  cli.py  dlive_tcp.py  local_midi.py  monitor.py  rtp_midi.py  test_send.py  wizard.py
systemd/: dlive-midi-bridge.service
